CloudGaia Academy DevOps/main/default/objects/Property__c/fields/Adress_Position__c.field-meta.xml
<CustomField>
    <fullName>Adress_Position__c</fullName>
    <label>Adress Position</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>