CloudGaia Academy DevOps/main/default/objects/Property__c/fields/Price_x_night__c.field-meta.xml
<CustomField>
    <fullName>Price_x_night__c</fullName>
    <label>Price x night</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>