CloudGaia Academy DevOps/main/default/objects/Property__c/fields/User_AirBnb__c.field-meta.xml
<CustomField>
    <fullName>User_AirBnb__c</fullName>
    <label>User_AirBnb</label>
    <referenceTo>User_AirBnb__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>